<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.zingbytes.see4children.Activity_Signup">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/app_main">

            <LinearLayout
                android:id="@+id/linear_back"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:gravity="center">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/icon_back" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="1dp"
                android:gravity="center"
                android:text="Sign Up"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/add_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center|top"
                android:layout_marginTop="10dp"
                android:background="@drawable/signup_image_circle"
                android:orientation="vertical">

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <!--<ProgressBar
                        android:id="@+id/progressBar9"
                        style="?android:attr/progressBarStyleSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center" />-->

                    <com.zingbytes.see4children.ui.CircleImageView
                        android:id="@+id/imageView"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center" />

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="right|center"
                        android:src="@drawable/icon_signup_image_add" />

                </FrameLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/add_profile"
                android:orientation="vertical"
                android:layout_marginTop="16dp"
                android:paddingRight="16dp"
                android:paddingLeft="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:weightSum="1">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="6dp"
                        android:layout_weight=".5"
                        android:background="@drawable/signup_edit_field_grey_bg"
                        android:orientation="horizontal"
                        android:paddingLeft="6dp">

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_gravity="center"
                            android:src="@drawable/icon_uer_name_grey" />

                        <EditText
                            android:id="@+id/first_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="4dp"
                            android:backgroundTint="@android:color/transparent"
                            android:hint="@string/first_name"
                            android:inputType="textCapWords"
                            android:digits="@string/alphabets"
                            android:textColor="@color/grey"
                            android:textColorHint="@color/grey"
                            android:textCursorDrawable="@color/white"
                            android:textSize="14sp" />


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="6dp"
                        android:layout_weight=".5"
                        android:background="@drawable/signup_edit_field_grey_bg"
                        android:orientation="horizontal"
                        android:paddingLeft="6dp">

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_gravity="center"
                            android:src="@drawable/icon_uer_name_grey" />

                        <EditText
                            android:id="@+id/last_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="4dp"
                            android:backgroundTint="@android:color/transparent"
                            android:hint="@string/last_name"
                            android:inputType="textCapWords"
                            android:digits="@string/alphabets"
                            android:textColor="@color/grey"
                            android:textColorHint="@color/grey"
                            android:textSize="14sp" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/signup_edit_field_grey_bg"
                    android:orientation="horizontal"
                    android:paddingLeft="6dp">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_gravity="center"
                        android:src="@drawable/icon_email_grey" />

                    <EditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="4dp"
                        android:backgroundTint="@android:color/transparent"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/grey"
                        android:textColorHint="@color/grey"
                        android:textCursorDrawable="@color/white"
                        android:textSize="14sp" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/signup_edit_field_grey_bg"
                    android:orientation="horizontal"
                    android:paddingLeft="6dp">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_gravity="center"
                        android:src="@drawable/icon_phone_grey" />

                    <EditText
                        android:id="@+id/phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="4dp"
                        android:backgroundTint="@android:color/transparent"
                        android:hint="@string/phone"
                        android:inputType="number"
                        android:maxLength="10"
                        android:textColor="@color/grey"
                        android:textColorHint="@color/grey"
                        android:textCursorDrawable="@color/white"
                        android:textSize="14sp" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/signup_edit_field_grey_bg"
                    android:orientation="horizontal"
                    android:paddingLeft="6dp">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_gravity="center"
                        android:src="@drawable/icon_password_grey" />

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="4dp"
                        android:backgroundTint="@android:color/transparent"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:textColor="@color/grey"
                        android:textColorHint="@color/grey"
                        android:textCursorDrawable="@color/white"
                        android:textSize="14sp" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/signup_edit_field_grey_bg"
                    android:orientation="horizontal"
                    android:paddingLeft="6dp">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_gravity="center"
                        android:src="@drawable/icon_password_grey" />

                    <EditText
                        android:id="@+id/confirm_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="4dp"
                        android:backgroundTint="@android:color/transparent"
                        android:hint="@string/confirm_password"
                        android:inputType="textPassword"
                        android:textColor="@color/grey"
                        android:textColorHint="@color/grey"
                        android:textCursorDrawable="@color/white"
                        android:textSize="14sp" />


                </LinearLayout>

                <Button
                    android:id="@+id/signup_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="26dp"
                    android:background="@drawable/button_signup_bg"
                    android:text="@string/action_sign_in_short"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@android:color/transparent"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/sign_in_link"
                        android:textColor="@color/grey"
                        android:textSize="15sp" />


                </LinearLayout>


            </LinearLayout>


        </RelativeLayout>

    </LinearLayout>


</LinearLayout>
